--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/qr-coder/sociee/issues"
   },
-  "homepage": "https://github.com/qr-coder/sociee#readme"
+  "homepage": "https://github.com/qr-coder/sociee#readme",
+  "dependencies": {
+    "D": "^1.0.0",
+    "postcss-modules": "^3.2.2",
+    "postcss-uncss": "^0.17.0",
+    "uncss": "^0.17.3"
+  }
 }
